fixed content spacing below image

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -37,6 +37,7 @@ body {
   margin-left: -2.4rem;
   width: calc(100% + 6.4rem);
   margin-top: 4.8rem;
+  margin-bottom: 3.2rem;
 }
 
 article {
